; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_mergeinfo.c_svn_client__get_wc_or_repos_mergeinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_client/extr_mergeinfo.c_svn_client__get_wc_or_repos_mergeinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_client__get_wc_or_repos_mergeinfo(i32** %0, i32* %1, i32* %2, i32 %3, i32 %4, i32* %5, i8* %6, i32* %7, i32* %8) #0 {
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i32*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i64, align 8
  store i32** %0, i32*** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32 %3, i32* %13, align 4
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store i8* %6, i8** %16, align 8
  store i32* %7, i32** %17, align 8
  store i32* %8, i32** %18, align 8
  %20 = load i32**, i32*** %10, align 8
  store i32* null, i32** %20, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = load i32, i32* @FALSE, align 4
  %24 = load i32, i32* %13, align 4
  %25 = load i32, i32* @FALSE, align 4
  %26 = load i32, i32* %14, align 4
  %27 = load i32*, i32** %15, align 8
  %28 = load i8*, i8** %16, align 8
  %29 = load i32*, i32** %17, align 8
  %30 = load i32*, i32** %18, align 8
  %31 = load i32*, i32** %18, align 8
  %32 = call i32 @svn_client__get_wc_or_repos_mergeinfo_catalog(i64* %19, i32* %21, i32* %22, i32 %23, i32 %24, i32 %25, i32 %26, i32* %27, i8* %28, i32* %29, i32* %30, i32* %31)
  %33 = call i32 @SVN_ERR(i32 %32)
  %34 = load i64, i64* %19, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %46

36:                                               ; preds = %9
  %37 = load i64, i64* %19, align 8
  %38 = call i64 @apr_hash_count(i64 %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %46

40:                                               ; preds = %36
  %41 = load i32*, i32** %18, align 8
  %42 = load i64, i64* %19, align 8
  %43 = call i32 @apr_hash_first(i32* %41, i64 %42)
  %44 = call i32* @apr_hash_this_val(i32 %43)
  %45 = load i32**, i32*** %10, align 8
  store i32* %44, i32** %45, align 8
  br label %46

46:                                               ; preds = %40, %36, %9
  %47 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %47
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_client__get_wc_or_repos_mergeinfo_catalog(i64*, i32*, i32*, i32, i32, i32, i32, i32*, i8*, i32*, i32*, i32*) #1

declare dso_local i64 @apr_hash_count(i64) #1

declare dso_local i32* @apr_hash_this_val(i32) #1

declare dso_local i32 @apr_hash_first(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
